# ledger-reconciliation

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
reports/: audit_report.md  breaks.csv  summary.csv
src/recon/: __init__.py  cli.py  data.py  models.py  reconcile.py
tests/: test_breaks.py  test_e2e.py  test_generator.py  test_invariants.py
